After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 677928 - user-accounts: UmAccountDialog shouldn't be valid when shown
user-accounts: UmAccountDialog shouldn't be valid when shown
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: User Accounts
unspecified
Other All
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks: 677548
 
 
Reported: 2012-06-12 08:27 UTC by Stef Walter
Modified: 2012-06-12 10:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gnome-3-4: user-accounts: UmAccountDialog shouldn't be valid when shown (1.16 KB, patch)
2012-06-12 08:27 UTC, Stef Walter
committed Details | Review
user-accounts: UmAccountDialog shouldn't be valid when shown (1.24 KB, patch)
2012-06-12 08:36 UTC, Stef Walter
committed Details | Review

Description Stef Walter 2012-06-12 08:27:44 UTC
The user needs to enter some data before the dialog's 'Create'
button can be clicked.
Comment 1 Stef Walter 2012-06-12 08:27:46 UTC
Created attachment 216177 [details] [review]
gnome-3-4: user-accounts: UmAccountDialog shouldn't be valid when shown

The user needs to enter some data before the dialog's 'Create'
button can be clicked.
Comment 2 Stef Walter 2012-06-12 08:30:25 UTC
Comment on attachment 216177 [details] [review]
gnome-3-4: user-accounts: UmAccountDialog shouldn't be valid when shown

This is the patch for gnome-3-4.
Comment 3 Stef Walter 2012-06-12 08:36:54 UTC
Created attachment 216178 [details] [review]
user-accounts: UmAccountDialog shouldn't be valid when shown

The user needs to enter some data before the dialog's 'Create'
button can be clicked.
Comment 4 Bastien Nocera 2012-06-12 09:15:18 UTC
Both looking good.