user-accounts: UmAccountDialog shouldn't be valid when shown

The user needs to enter some data before the dialog's 'Create'
button can be clicked.

https://bugzilla.gnome.org/show_bug.cgi?id=677928